==> TroyNeubauer/SLI-2020/Sensors/Core/Src/Modules/ICM_20948.cpp <==
#include <Modules/ICM_20948_IMPL.h>
#include "Modules/Util/ICM_20948_REGISTERS.h"
#include "Modules/Util/AK09916_REGISTERS.h"

ICM_20948_Status_e ICM_20948::startupDefault(void)
{
	ICM_20948_Status_e retval = ICM_20948_Stat_Ok;

	retval = checkID();
	if (retval != ICM_20948_Stat_Ok)
	{
		status = retval;
		return status;
	}

	retval = swReset();
	if (retval != ICM_20948_Stat_Ok)
	{
		status = retval;
		return status;
	}
	HAL_Delay(50);

	retval = sleep(false);
	if (retval != ICM_20948_Stat_Ok)
	{
		status = retval;
		return status;
	}

	retval = lowPower(false);
	if (retval != ICM_20948_Stat_Ok)
	{
		status = retval;
		return status;
	}

	retval = setSampleMode((ICM_20948_Internal_Acc | ICM_20948_Internal_Gyr), ICM_20948_Sample_Mode_Continuous); // options: ICM_20948_Sample_Mode_Continuous or ICM_20948_Sample_Mode_Cycled
	if (retval != ICM_20948_Stat_Ok)
	{
		status = retval;
		return status;
	} // sensors: 	ICM_20948_Internal_Acc, ICM_20948_Internal_Gyr, ICM_20948_Internal_Mst

	ICM_20948_fss_t FSS;
	FSS.a = gpm2;   // (ICM_20948_ACCEL_CONFIG_FS_SEL_e)
	FSS.g = dps250; // (ICM_20948_GYRO_CONFIG_1_FS_SEL_e)
	retval = setFullScale((ICM_20948_Internal_Acc | ICM_20948_Internal_Gyr), FSS);
	if (retval != ICM_20948_Stat_Ok)
	{
		status = retval;
		return status;
	}

	ICM_20948_dlpcfg_t dlpcfg;
	dlpcfg.a = acc_d473bw_n499bw;
	dlpcfg.g = gyr_d361bw4_n376bw5;
	retval = setDLPFcfg((ICM_20948_Internal_Acc | ICM_20948_Internal_Gyr), dlpcfg);
	if (retval != ICM_20948_Stat_Ok)
	{
		status = retval;
		return status;
	}

	retval = enableDLPF(ICM_20948_Internal_Acc, false);
	if (retval != ICM_20948_Stat_Ok)
	{
		status = retval;
		return status;
	}
	retval = enableDLPF(ICM_20948_Internal_Gyr, false);
	if (retval != ICM_20948_Stat_Ok)
	{
		status = retval;
		return status;
	}
	retval = startupMagnetometer();
	if (retval != ICM_20948_Stat_Ok)
	{
		status = retval;
		return status;
	}

	return status;
}

ICM_20948_Status_e ICM_20948_SPI::begin(SPI_HandleTypeDef *spi, GPIO_TypeDef *bank, uint16_t csPin)
{
	// Associate
	m_SPI = spi;
	m_Bank = bank;
	m_CSPin = csPin;

	// Set pins to default positions
	HAL_GPIO_WritePin(m_Bank, m_CSPin, GPIO_PIN_SET);

	// 'Kickstart' the SPI hardware.
	/*_spi->beginTransaction(_spisettings);
	 _spi->transfer(0x00);
	 _spi->endTransaction();*/
	//uint8_t value = 0;
	//HAL_SPI_Transmit(hspi, &value, sizeof(value), HAL_MAX_DELAY);
	// Set up the serif
	_serif.write = ICM_20948_write_SPI;
	_serif.read = ICM_20948_read_SPI;
	_serif.user = (void*) this; // refer to yourself in the user field

	// Link the serif
	_device._serif = &_serif;

	// Perform default startup
	status = startupDefault();
	if (status != ICM_20948_Stat_Ok)
	{
		return status;
	}

	return ICM_20948_Stat_Ok;
}

ICM_20948_Status_e ICM_20948_write_SPI(uint8_t reg, uint8_t *data, uint32_t len, void *user)
{
	if (user == NULL)
	{
		return ICM_20948_Stat_ParamErr;
	}
	SPI_HandleTypeDef* spi = ((ICM_20948_SPI*) user)->m_SPI; // Cast user field to ICM_20948_SPI type and extract the SPI interface pointer
	GPIO_TypeDef* bank = ((ICM_20948_SPI*) user)->m_Bank;
	uint16_t cs = ((ICM_20948_SPI*) user)->m_CSPin;
	if (spi == NULL)
	{
		return ICM_20948_Stat_ParamErr;
	}

	/*
	// 'Kickstart' the SPI hardware. This is a fairly high amount of overhead, but it guarantees that the lines will start in the correct states even when sharing the SPI bus with devices that use other modes
	_spi->beginTransaction(spisettings);
	_spi->transfer(0x00);
	_spi->endTransaction();
*/


/*
	digitalWrite(cs, LOW);
	delayMicroseconds(5);

	_spi->beginTransaction(spisettings);
	_spi->transfer(((reg & 0x7F) | 0x00));
	//  SPI.transfer(data, len); // Can't do this thanks to Arduino's poor implementation
	for (uint32_t indi = 0; indi < len; indi++)
	{
		_spi->transfer(*(data + indi));
	}
	_spi->endTransaction();
	// delayMicroseconds(5);
	digitalWrite(cs, HIGH);

*/

	HAL_GPIO_WritePin(bank, cs, GPIO_PIN_RESET);

	HAL_SPI_Transmit(spi, &reg, sizeof(reg), HAL_MAX_DELAY);

	HAL_SPI_Transmit(spi, data, len, GPIO_PIN_RESET);

	// delayMicroseconds(5);
	//digitalWrite(cs, HIGH);

	HAL_GPIO_WritePin(bank, cs, GPIO_PIN_SET);

	return ICM_20948_Stat_Ok;
}

ICM_20948_Status_e ICM_20948_read_SPI(uint8_t reg, uint8_t *buff, uint32_t len, void *user)
{
	if (user == NULL)
	{
		return ICM_20948_Stat_ParamErr;
	}
	SPI_HandleTypeDef* spi = ((ICM_20948_SPI*) user)->m_SPI; // Cast user field to ICM_20948_SPI type and extract the SPI interface pointer
	GPIO_TypeDef* bank = ((ICM_20948_SPI*) user)->m_Bank;
	uint16_t cs = ((ICM_20948_SPI*) user)->m_CSPin;
	if (spi == NULL)
	{
		return ICM_20948_Stat_ParamErr;
	}

/*
	// 'Kickstart' the SPI hardware. This is a fairly high amount of overhead, but it guarantees that the lines will start in the correct states
	_spi->beginTransaction(spisettings);
	_spi->transfer(0x00);
	_spi->endTransaction();

	digitalWrite(cs, LOW);
	//   delayMicroseconds(5);
	_spi->beginTransaction(spisettings);
	_spi->transfer(((reg & 0x7F) | 0x80));
	//  SPI.transfer(data, len); // Can't do this thanks to Arduino's stupid implementation
	for (uint32_t indi = 0; indi < len; indi++)
	{
		*(buff + indi) = _spi->transfer(0x00);
	}
	_spi->endTransaction();
	//   delayMicroseconds(5);
	digitalWrite(cs, HIGH);
*/

	HAL_GPIO_WritePin(bank, cs, GPIO_PIN_RESET);

	HAL_SPI_Transmit(spi, &reg, sizeof(reg), HAL_MAX_DELAY);

	HAL_SPI_Receive(spi, buff, len, HAL_MAX_DELAY);

	// delayMicroseconds(5);
	//digitalWrite(cs, HIGH);

	HAL_GPIO_WritePin(bank, cs, GPIO_PIN_SET);

	return ICM_20948_Stat_Ok;



}
